refactor: AdminUserEntity name字段重命名为realName，同步更新数据库、接口文档
