# docs/admin-api-docs.json
@@ -1236,7 +1236,7 @@
         "operationId": "list_4",
         "parameters": [
           {
-            "name": "current",
+            "name": "pageNum",
             "in": "query",
             "required": false,
             "schema": {
@@ -1246,13 +1246,38 @@
             }
           },
           {
-            "name": "size",
+            "name": "pageSize",
             "in": "query",
             "required": false,
             "schema": {
               "type": "integer",
               "format": "int64",
               "default": 10
+            }
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "realName",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
             }
           }
         ],
@@ -1552,35 +1577,14 @@
             "type": "string",
             "description": "密码"
           },
-          "nickname": {
+          "realName": {
             "type": "string",
-            "description": "昵称"
-          },
-          "phone": {
-            "type": "string",
-            "description": "手机号"
-          },
-          "email": {
-            "type": "string",
-            "description": "邮箱"
-          },
-          "avatar": {
-            "type": "string",
-            "description": "头像"
+            "description": "姓名"
           },
           "status": {
             "type": "integer",
             "description": "状态：0-禁用，1-正常",
             "format": "int32"
-          },
-          "lastLoginTime": {
-            "type": "string",
-            "description": "最后登录时间",
-            "format": "date-time"
-          },
-          "lastLoginIp": {
-            "type": "string",
-            "description": "最后登录IP"
           },
           "deleted": {
             "type": "integer",
